# InkSight-tool

./: .env  .env.example  .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  cli.py  main.py  pyproject.toml  users.json
backend/src/agentic_rag/: __init__.py
backend/src/agentic_rag/api/: auth_routes.py  models.py  routes.py
backend/src/agentic_rag/core/: auth.py  config.py  tracing.py
backend/src/agentic_rag/models/: llm.py
backend/src/agentic_rag/services/: agent.py  data_pipeline.py  document_loader.py  file_processor.py  prompts.py  reranker.py  retrieval.py  text_splitter.py  vector_store.py
backend/vector_store/: chroma.sqlite3
data/: ocr_results_20250820_133254 (1).txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/ocr_data/: converted_ocr_results.json  ocr_results_20250801_160306.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthProvider.tsx  ChatInterface.tsx  FileUpload.tsx  LoginPage.tsx  ProtectedApp.tsx  StatusPanel.tsx
frontend/src/lib/: api.ts  auth.ts
